--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,18 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc.json",
   "arrowParens": "always",
-  "plugins": ["prettier-plugin-imports", "prettier-plugin-jsdoc", "prettier-plugin-pkg"],
+  "bracketSameLine": true,
+  "plugins": [
+    "prettier-plugin-imports",
+    "prettier-plugin-jsdoc",
+    "prettier-plugin-pkg",
+    "prettier-plugin-tailwindcss"
+  ],
+  
   "printWidth": 120,
   "quoteProps": "consistent",
   "semi": true,
   "singleQuote": true,
+  "tailwindFunctions": ["clsx", "cva", "tw", "tw.styles"],
   "trailingComma": "all"
 }
