--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-screens": "~4.3.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "twrnc": "^4.6.0"
+    "twrnc": "~4.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.26.0",
@@ -50,7 +50,8 @@
     "prettier-plugin-imports": "~4.2.12",
     "prettier-plugin-jsdoc": "~1.3.0",
     "prettier-plugin-pkg": "~0.18.1",
-    "tailwindcss": "^3.4.16",
+    "prettier-plugin-tailwindcss": "~0.6.9",
+    "tailwindcss": "~3.4.16",
     "typescript": "~5.7.2"
   }
 }
