--- a/package.json
+++ b/package.json
@@ -12,26 +12,30 @@
   "dependencies": {
     "@expo/vector-icons": "~14.0.4",
     "@react-navigation/bottom-tabs": "~7.1.3",
-    "@react-navigation/native": "~7.0.13",
-    "expo": "~52.0.17",
+    "@react-navigation/native": "~7.0.1",
+    "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-navigation-bar": "~4.0.6",
     "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.16",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.5",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "~0.468.0",
     "react": "~19.0.0",
     "react-dom": "~19.0.0",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "~2.21.2",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "~4.12.0",
-    "react-native-screens": "~4.3.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "~15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "twrnc": "~4.6.0"
