--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "melancholy",
-  "version": "0.0.1",
+  "name": "ampdeck",
+  "version": "0.0.2",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
