--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ampdeck",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "~14.0.4",
     "@react-navigation/bottom-tabs": "~7.1.3",
     "@react-navigation/native": "~7.0.1",
+    "class-variance-authority": "~0.7.1",
     "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
